src/objects/Buyer__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Buyers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Buyers</relationshipLabel>
        <relationshipName>Buyers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Buyer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BUYER_{000000}</displayFormat>
        <label>Buyer&apos;s ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>